added spotify api functionality!!!!,improvements to styling, deprecated quicksort.

--- a/app/templates/albums.html
+++ b/app/templates/albums.html
@@ -1,26 +1,53 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<h1 style="text-align:center">Recent Releases</h1>
+
 <div class="row">
-  <div class= "col-sm-3">
-    
-  {% for album in albums %}
+  {% for album in releases %}
 
   {% set name= album["name"] %}
   {% set image= album["images"][1]["url"] %}
   {% set id = album["id"] %}
-
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src= {{image}} alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">{{name}}</h5>
-      <a href="/log?id={{id}}" class="btn btn-primary">Log</a>
+  {% set artist = album["artists"][0]["name"] %}
+  <div class="col-md-2 " style="margin-bottom:10px;">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src= {{image}} alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">{{name}}</h5>
+        <p>{{artist}}</p>
+        <a href="/log?id={{id}}" class="btn btn-primary">Log</a>
+      </div>
     </div>
   </div>
 
   {% endfor %}
 
+</div>
+
+<h1 style="text-align:center">Your Recently Played</h1>
+
+<div class="row">
+  {% for album in albums %}
+
+  {% set name= album["name"] %}
+  {% set image= album["images"][1]["url"] %}
+  {% set id = album["id"] %}
+  {% set artist = album["artists"][0]["name"] %}
+  <div class="col-md-2 " style="margin-bottom:10px;">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src= {{image}} alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">{{name}}</h5>
+        <p>{{artist}}</p>
+        <a href="/log?id={{id}}" class="btn btn-primary">Log</a>
+      </div>
+    </div>
   </div>
+
+  {% endfor %}
+
+
 </div> 
 
 {% endblock %}
