--- a/app/templates/log.html
+++ b/app/templates/log.html
@@ -7,7 +7,7 @@
 
 
 <div class="container">
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 30rem;">
         <img id = "image" data-src = {{image}} class="card-img-top" src= {{image}} alt="Card image cap">
         <div class="card-body">
         <h5 id = "name"  data-id = "{{id}}" class="card-title">{{name}}</h5>
@@ -35,7 +35,7 @@
               <textarea class="form-control" id="review" rows="3"></textarea>
             </div>
           </form>
-        <a href="#"  id = "log_button" class="btn btn-primary">Log</a>
+        <a href="/dashboard"  id = "log_button" class="btn btn-primary">Log</a>
         </div>
     </div>
 </div> 
