--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -46,7 +46,7 @@
 <div id=wrapper>
     <div class="card" style="width: 40rem; vertical-align: middle;">
         <h1>Welcome to AOTY-pizza 🍕💿</h1>
-        <h2>log in to spotify to start rating!</h2>
+        <h2>log in with spotify to start rating!</h2>
         <a href="/auth"  id = "log_button" class="btn btn-primary">Log in to spotify</a>
     </div>
 </div>
